--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "fireship-lessons"
-  }
+    "default": "githubactionpractice-f082b",
+    "GitHubActionPrac": "githubactionpractice-f082b"
+  },
+  "targets": {},
+  "etags": {}
 }
