Refactor Firebase configuration and workflows: remove obsolete deploy.yml and integrate.yml, add firebase-hosting-merge.yml and firebase-hosting-pull-request.yml for improved CI/CD processes.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,8 +1,5 @@
 {
   "projects": {
-    "default": "githubactionpractice-f082b",
-    "GitHubActionPrac": "githubactionpractice-f082b"
-  },
-  "targets": {},
-  "etags": {}
+    "default": "githubactionpractice-f082b"
+  }
 }
